[tool.poetry]
name = "llfs-module-enrichment"
version = "0.1.0"
description = ""
authors = ["Edward Kang <edwardkang00@gmail.com>"]
readme = "README.md"
packages = [{include = "llfs_module_enrichment"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
statsmodels = "^0.13.5"
ipykernel = "^6.21.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
